--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
     <include src="./partials/header.html"></include>
+    <include src="./partials/mobi-menu.html"></include>
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/products.html"></include>
