--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,10 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-
-    <include src="./partials/header.html"></include>
-    <include src="./partials/mobi-menu.html"></include>
+    <header>
+      <include src="./partials/header.html"></include>
+      <include src="./partials/mobi-menu.html"></include>
+    </header>
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/products.html"></include>
