--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/main-modal.html"></include>
-    <include src="./partials/modal-footer.html"></include>
+    <include src="./partials/demo.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
