--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,6 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
-    <script src="./modal-footer.js"></script>
+    <!-- <script src="./modal-footer.js"></script> -->
   </body>
 </html>
