--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
   <body data-locationd>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <header>
+    <header class="header">
       <include src="./partials/header.html"></include>
       <include src="./partials/mobi-menu.html"></include>
     </header>
@@ -39,5 +39,6 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./modal-footer.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
