--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./main-modal.js"></script>
     <script src="./modal-footer.js"></script>
     <script src="menu.js"></script>
     <script
