--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,6 @@
     integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
     crossorigin="anonymous"
   ></script>
-  
+  <script src="ice_cream.js"></script>
   </body>
 </html>
