--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
     <include src="./partials/main-modal.html"></include>
     <include src="./partials/modal-location.html"></include>
     <include src="./partials/modal-footer.html"></include>
+    <audio class="muzon" src="./audio/hlop.mp3"></audio>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
