--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/main-modal.html"></include>
+    <include src="./partials/modal-about.html"></include>
     <include src="./partials/modal-location.html"></include>
     <include src="./partials/modal-footer.html"></include>
     <audio class="muzon" src="./audio/hlop.mp3"></audio>
@@ -43,6 +44,7 @@
     <script src="./modal-footer.js"></script>
     <script src="menu.js"></script>
     <script src="animations.js"></script>
+    <script src="modal-about.js"></script>
     <script
     defer
     src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
