--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,7 @@
     crossorigin="anonymous"
   ></script>
   <script src="ice_cream.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  <script src="yacor.js"></script>
   </body>
 </html>
